# tricksterstable-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  games.md  lefthook.yml  rust-toolchain.toml
.github/workflows/: quickstart.yml
benches/: benches.rs
data/: szs.singlegame.json  yokai2p.multiplegames.json  yokai2p.singlegame.json
examples/: dealers_dilemma.rs  dealers_dilemma_comparison.rs  hotdog.rs  hotdog_comparison.rs  kaibosh.rs  kaibosh_bid_analysis.rs  kaibosh_experiment_1_comparison.rs  kaibosh_ismcts_diagnostic.rs  kaibosh_mcts_iterations_comparison.rs  kaibosh_perfect_hand_test.rs  kaibosh_policy_probabilities.rs  kaibosh_policy_verification.rs  kaibosh_policy_vs_pure_ismcts.rs  kaibosh_train_with_synthetic.rs  kansascity.rs  otter1p.rs  pala.rs  play_so8.rs  so8.rs  stickem.rs  stickem_experiment.rs  szs.rs  torchlit.rs  trickorbid.rs  trickorbid_experiment.rs  yokai2p.rs  yokai2p_verification.rs
experiments/: stickem.md
planning/: dealers_dilemma.txt
rules/: kaibosh.md  kaibosh.txt
src/: lib.rs  main.rs  utils.rs
src/games/: cincosverdes.rs  dealers_dilemma.rs  hotdog.rs  kaibosh.rs  kaibosh_enhanced.rs  kaibosh_policy_model.json  kaibosh_policy_model.rs  kansascity.rs  mod.rs  otter1p.rs  pala.rs  so8.rs  stickem.rs  szs.rs  threetrickypigs.rs  torchlit.rs  trickorbid.rs  yokai2p.rs
src/games/kaibosh/: features.rs  game.rs  mod.rs  model.json  model.rs  policy_model.rs  policy_model_superhuman.json  policy_model_with_context.json
