[package]
name = "tricksterstable-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
memoize = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
shuffle = "0.1.7"
serde_json = "1.0"
ismcts = { git = "https://github.com/Deliquescence/ismcts" }

[dev-dependencies]
clippy = "0.0.302"
